[project]
name = "cognito-load-test"
version = "0.1.0"
description = "Cognito Load Testing Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.26.0",
    "moto>=5.0.20",
    "setuptools>=75.3.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.1.9", "pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.lint.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 100
